<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/league_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/test_text"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/abc_text_size_medium_material" />

        <TextView
            android:id="@+id/matchday_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/test_text"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/abc_text_size_medium_material" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/share_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/accent"
            android:drawableLeft="@android:drawable/ic_menu_share"
            android:gravity="center"
            android:paddingLeft="120dp"
            android:paddingStart="120dp"
            android:paddingRight="120dp"
            android:paddingEnd="120dp"
            android:text="@string/share_text"
            android:contentDescription="@string/share_button_content"
            android:textColor="@color/text_icons"
            android:textSize="@dimen/abc_text_size_large_material" />
    </FrameLayout>

</LinearLayout>
