<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/widget"
        android:layout_width="match_parent"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:background="@color/primary">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_launcher"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/abc_text_size_large_material"
            android:textColor="@color/white"
            android:text="@string/widget_today_scores"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:paddingLeft="@dimen/widget_horizontal_padding"
        android:paddingStart="@dimen/widget_horizontal_padding"
        android:paddingRight="@dimen/widget_horizontal_padding"
        android:paddingEnd="@dimen/widget_horizontal_padding">
        <ListView
            android:id="@+id/widget_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/background_material_light"
            android:dividerHeight="1dp"
            tools:listitem="@layout/widget_today_list_item"/>
        <TextView
            android:id="@+id/widget_empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/primary_dark_material_dark"
            android:textAppearance="?android:textAppearanceLarge"
            android:text="@string/no_matches_today"/>
    </FrameLayout>


</LinearLayout>